--- a/EYAK(rev2)/app/src/main/res/layout/family_tab_list_view_item.xml
+++ b/EYAK(rev2)/app/src/main/res/layout/family_tab_list_view_item.xml
@@ -8,6 +8,7 @@
     android:paddingBottom="10dp">
 
     <androidx.cardview.widget.CardView
+        android:id="@+id/familyCardView"
         android:layout_width="match_parent"
         android:layout_height="70dp"
         android:layout_margin="20dp"
