add: 오타 수정 + 불필요한 Log 주석 처리

--- a/EYAK(rev2)/app/src/main/res/layout/fragment_medicine_add_result.xml
+++ b/EYAK(rev2)/app/src/main/res/layout/fragment_medicine_add_result.xml
@@ -626,7 +626,7 @@
                     android:backgroundTint="#E3F2C1"
                     android:fontFamily="@font/tmoney_bold"
                     android:includeFontPadding="false"
-                    android:text="화인 완료"
+                    android:text="확인 완료"
                     android:textColor="#757863" />
 
                 <Space
