--- a/EYAK(rev2)/app/src/main/res/layout/fragment_medicine_add_result.xml
+++ b/EYAK(rev2)/app/src/main/res/layout/fragment_medicine_add_result.xml
@@ -573,6 +573,7 @@
                         android:layout_weight="2"
                         android:gravity="center"
                         android:hint="용량"
+                        android:inputType="number|numberDecimal"
                         android:textColor="#DDE6ED"
                         android:textSize="18sp" />
 
