--- a/EYAK(rev2)/app/src/main/res/layout/alarm_tab_list_view_item.xml
+++ b/EYAK(rev2)/app/src/main/res/layout/alarm_tab_list_view_item.xml
@@ -29,24 +29,16 @@
                 android:layout_height="0dp"
                 android:layout_weight="4"
                 android:orientation="horizontal"
-                android:weightSum="13">
-
-                <Space
-                    android:layout_width="0dp"
-                    android:layout_height="match_parent"
-                    android:layout_weight="1" />
+                android:weightSum="14">
 
                 <ImageView
                     android:id="@+id/medicine_icon"
                     android:layout_width="0dp"
                     android:layout_height="match_parent"
-                    android:layout_weight="2"
-                    android:src="@drawable/eyak_logo" />
-
-                <Space
-                    android:layout_width="0dp"
-                    android:layout_height="match_parent"
-                    android:layout_weight="1" />
+                    android:layout_weight="4"
+                    android:padding="7dp"
+                    android:src="@drawable/eyak_logo"
+                    app:srcCompat="@drawable/ic_packagepill_afterglow" />
 
                 <LinearLayout
                     android:layout_width="0dp"
@@ -66,7 +58,7 @@
                         android:layout_height="0dp"
                         android:layout_weight="2"
                         android:fontFamily="@font/tmoney_regular"
-                        android:gravity="center_vertical"
+                        android:gravity="center|center_vertical"
                         android:includeFontPadding="false"
                         android:text="오후"
                         android:textColor="#757863"
@@ -78,7 +70,7 @@
                         android:layout_height="0dp"
                         android:layout_weight="3"
                         android:fontFamily="@font/tmoney_regular"
-                        android:gravity="center_vertical"
+                        android:gravity="center|center_vertical"
                         android:includeFontPadding="false"
                         android:text="13:30"
                         android:textColor="#757863"
@@ -90,11 +82,16 @@
                         android:layout_weight="1" />
                 </LinearLayout>
 
+                <Space
+                    android:layout_width="0dp"
+                    android:layout_height="match_parent"
+                    android:layout_weight="1" />
+
                 <TextView
                     android:id="@+id/medicine_name"
                     android:layout_width="0dp"
                     android:layout_height="match_parent"
-                    android:layout_weight="5"
+                    android:layout_weight="6"
                     android:fontFamily="@font/tmoney_bold"
                     android:gravity="center_vertical"
                     android:includeFontPadding="false"
@@ -113,7 +110,7 @@
 
                 <Space
                     android:layout_width="0dp"
-                    android:layout_height="wrap_content"
+                    android:layout_height="match_parent"
                     android:layout_weight="1" />
 
                 <TextView
