--- a/EYAK(rev2)/app/src/main/res/layout/medicine_tab_list_view_item.xml
+++ b/EYAK(rev2)/app/src/main/res/layout/medicine_tab_list_view_item.xml
@@ -11,7 +11,7 @@
     <androidx.cardview.widget.CardView
         android:id="@+id/medicineCardView"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
+        android:layout_height="80dp"
         android:layout_margin="20dp"
         app:cardBackgroundColor="#DDE6ED"
         app:cardCornerRadius="20dp"
@@ -22,7 +22,7 @@
         <LinearLayout
             android:id="@+id/medicineLinearLayout"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
+            android:layout_height="match_parent"
             android:layout_marginLeft="10dp"
             android:layout_marginTop="5dp"
             android:layout_marginRight="10dp"
@@ -62,7 +62,7 @@
                 android:includeFontPadding="false"
                 android:text="자세히"
                 android:textColor="#757863"
-                android:textSize="17dp" />
+                android:textSize="14sp" />
         </LinearLayout>
     </androidx.cardview.widget.CardView>
 
