--- a/frontend/EYAK(rev2)/app/src/main/res/layout/family_tab_list_view_item.xml
+++ b/frontend/EYAK(rev2)/app/src/main/res/layout/family_tab_list_view_item.xml
@@ -25,19 +25,12 @@
             android:orientation="horizontal"
             android:weightSum="100">
 
-            <ImageView
-                android:id="@+id/family_list_icon"
-                android:layout_width="0dp"
-                android:layout_height="match_parent"
-                android:layout_weight="20"
-                android:padding="5dp"
-                app:srcCompat="@drawable/baseline_person_24" />
-
             <LinearLayout
                 android:layout_width="0dp"
                 android:layout_height="match_parent"
-                android:layout_weight="30"
-                android:orientation="vertical">
+                android:layout_weight="50"
+                android:orientation="vertical"
+                android:paddingStart="20dp">
 
                 <LinearLayout
                     android:layout_width="match_parent"
