add: 가족 수정 페이지 추가 버튼

--- a/frontend/EYAK(rev2)/app/src/main/res/layout/family_edit_list_view_item.xml
+++ b/frontend/EYAK(rev2)/app/src/main/res/layout/family_edit_list_view_item.xml
@@ -50,7 +50,8 @@
                         android:fontFamily="@font/tmoney_regular"
                         android:gravity="center_vertical"
                         android:includeFontPadding="false"
-                        android:text="(닉네임)" />
+                        android:text="(닉네임)"
+                        android:textColor="#757863" />
 
                     <Space
                         android:layout_width="match_parent"
@@ -116,5 +117,7 @@
         </LinearLayout>
 
     </androidx.cardview.widget.CardView>
+
+
 
 </androidx.constraintlayout.widget.ConstraintLayout>
