--- a/frontend/EYAK(rev2)/app/src/main/res/layout/fragment_medicine_add_result.xml
+++ b/frontend/EYAK(rev2)/app/src/main/res/layout/fragment_medicine_add_result.xml
@@ -574,7 +574,7 @@
                         android:gravity="center"
                         android:hint="용량"
                         android:inputType="number|numberDecimal"
-                        android:textColor="#DDE6ED"
+                        android:textColor="#757863"
                         android:textSize="18sp" />
 
                     <Space
@@ -589,7 +589,7 @@
                         android:layout_weight="2"
                         android:gravity="center"
                         android:hint="단위"
-                        android:textColor="#DDE6ED"
+                        android:textColor="#757863"
                         android:textSize="18sp" />
 
                     <Space
@@ -620,7 +620,7 @@
                     android:layout_weight="2" />
 
                 <Button
-                    android:id="@+id/chkcomplete"
+                    android:id="@+id/chkComplete"
                     android:layout_width="0dp"
                     android:layout_height="match_parent"
                     android:layout_weight="6"
