fix: 프로젝트 명 변경, 플레이스토어 출시 문제로

--- a/frontend/EYAK(rev2)/app/src/main/res/layout/activity_main.xml
+++ b/frontend/EYAK(rev2)/app/src/main/res/layout/activity_main.xml
@@ -92,7 +92,7 @@
 
     <androidx.fragment.app.FragmentContainerView
         android:id="@+id/mainFragment"
-        android:name="com.example.eyakrev1.AlarmFragment"
+        android:name="a103.dev.eyakrev1.AlarmFragment"
         android:layout_width="0dp"
         android:layout_height="0dp"
         app:layout_constraintBottom_toTopOf="@+id/BottomLinearLayout"
