Revert "fix: 프로젝트 명 변경, 플레이스토어 출시 문제로"
This reverts commit 7ae90e46d458bd64095b0f126b8b14687717c40b.

--- a/frontend/EYAK(rev2)/app/src/main/res/layout/fragment_device_register.xml
+++ b/frontend/EYAK(rev2)/app/src/main/res/layout/fragment_device_register.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context="a103.dev.eyakrev1.DeviceRegisterFragment">
+    tools:context=".DeviceRegisterFragment">
 
     <!-- TODO: Update blank fragment layout -->
 
