--- a/frontend/EYAK(rev2)/app/src/main/res/layout/fragment_device_register.xml
+++ b/frontend/EYAK(rev2)/app/src/main/res/layout/fragment_device_register.xml
@@ -18,6 +18,37 @@
             android:orientation="vertical">
 
             <LinearLayout
+                android:id="@+id/permLayout"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:layout_marginHorizontal="20dp"
+                android:layout_marginTop="10dp"
+                android:gravity="center"
+                android:orientation="horizontal">
+
+                <TextView
+                    android:id="@+id/permText"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_marginRight="10dp"
+                    android:fontFamily="@font/tmoney_bold"
+                    android:includeFontPadding="false"
+                    android:text="앱 권한을 허용해 주세요."
+                    android:textColor="#757863"
+                    android:textSize="16sp" />
+
+                <Button
+                    android:id="@+id/permBtn"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:backgroundTint="#FF9B9B"
+                    android:fontFamily="@font/tmoney_regular"
+                    android:includeFontPadding="false"
+                    android:text="권한 허용"
+                    android:textColor="#757863" />
+            </LinearLayout>
+
+            <LinearLayout
                 android:id="@+id/btLayout"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
