add: 이전, 다음달 버튼 구현 + 미래 복약은 색칠X

--- a/frontend/EYAK(rev2)/app/src/main/res/layout/single_row_calendar_day_item.xml
+++ b/frontend/EYAK(rev2)/app/src/main/res/layout/single_row_calendar_day_item.xml
@@ -27,7 +27,7 @@
             android:layout_width="match_parent"
             android:layout_height="0dp"
             android:layout_weight="80"
-            android:tint="#FFFFFF"
+            android:tint="#F8FCF8"
             app:srcCompat="@drawable/round_rectangle_24" />
     </LinearLayout>
 </androidx.constraintlayout.widget.ConstraintLayout>
