--- a/frontend/EYAK(rev2)/app/src/main/res/layout/family_tab_main.xml
+++ b/frontend/EYAK(rev2)/app/src/main/res/layout/family_tab_main.xml
@@ -6,6 +6,7 @@
     android:layout_height="match_parent">
 
     <FrameLayout
+        android:id="@+id/frameLayout2"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         app:layout_constraintBottom_toBottomOf="parent"
@@ -37,6 +38,7 @@
                     android:textAppearance="@style/TextAppearance.AppCompat.Large"
                     android:textColor="#757863"
                     android:textSize="30sp" />
+
             </LinearLayout>
 
             <ListView
@@ -70,5 +72,34 @@
                 android:layout_height="match_parent"
                 android:layout_weight="4" />
         </LinearLayout>
+
     </FrameLayout>
+
+    <FrameLayout
+        android:layout_width="50dp"
+        android:layout_height="50dp"
+        android:layout_marginTop="15dp"
+        android:layout_marginEnd="10dp"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintTop_toTopOf="parent">
+
+        <ImageView
+            android:id="@+id/acceptFamilyBtn"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:tint="#E6CC72"
+            app:srcCompat="@drawable/baseline_lightbulb_24" />
+
+        <TextView
+            android:id="@+id/acceptFamilyCnt"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:fontFamily="@font/tmoney_bold"
+            android:gravity="center"
+            android:includeFontPadding="false"
+            android:text="1"
+            android:textColor="#757863" />
+
+    </FrameLayout>
+
 </androidx.constraintlayout.widget.ConstraintLayout>
